--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/Agnik292005/voyago.git",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
